# cluster-scoped-cicd

./: README.md
gcp/: Makefile  tekton-pv.yaml
gcp/certs/: certificate.yaml  clusterissuer-prod.yaml  clusterissuer-staging.yaml
gcp/container/: Dockerfile  container.yaml  nginx-cert-test.yaml
gcp/container/core_test/: BUILD  Dockerfile  Dockerfile.asylo  Dockerfile.bazel  WORKSPACE  core_test.yaml
gcp/container/core_test/main/: BUILD  hello-world.cc
gcp/container/html/: index.html
gcp/helloworld/: task.yaml  taskrun.yaml
gcp/secrets/: config.json  harbor-sa.yaml  harbor-secret-tekton.yaml  harbor-secret.yaml  secret.yaml  serviceaccount.yaml
gcp/yaml/: kanikopod.yaml  pipeline.yaml  pipelinerun.yaml  role.yaml  rolebinding.yaml  task-deploy.yaml  task.yaml  taskrun-deploy.yaml  taskrun.yaml
gcp/yaml/asylo/: asylodeploy.yaml  asylopipeline.yaml  asylopipelinerun.yaml  asylorun-deploy.yaml  asylorun.yaml
gcp/yaml/resources/: asylo_registry_resource.yaml  gcr_resource.yaml  git_resource.yaml  harbor_resource.yaml
gcp/yaml/triggers/: asylo-eventlistener.yaml  el-ingress.yaml  eventlistener.yaml
